--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -333,10 +333,6 @@ select::-ms-expand {
 }
 
 /*----- 余白 -----*/
-main{
-  padding-top: 103px;
-}
-
 .mt10{
   margin-top: 10px;
 }
@@ -370,9 +366,6 @@ main{
 }
 
 @media (min-width: 765px) {
-  main{
-    padding-top: 170px;
-  }
 
   .inner{
     padding: 0 27px;
@@ -557,7 +550,7 @@ main{
     justify-content: space-between;
     align-items: center;
     padding: 30px 30px 40px;
-    position: fixed;
+    // position: fixed;
     background-color: rgb(255, 255, 255);
     z-index: 2;
   }
@@ -749,13 +742,15 @@ main{
 .Mvswiper{
   width: 100%;
   .swiper-wrapper{
-    padding-bottom: 80px;
+
   }
   
   .swiper-slide {
+    padding-bottom: 40px;
+    margin-top: 80px;
     opacity: 0.4;
     overflow: hidden;
-    transition: .7s;
+    transition:  .7s;
   }
   
   .swiper-horizontal>.swiper-pagination-progressbar,
@@ -770,7 +765,7 @@ main{
   .swiper-slide-active {
     opacity: 1;
     z-index: 1;
-    transform: scale(1.3); /* スライドの大きさ調整 */
+    transform: scale(1.2); /* スライドの大きさ調整 */
   }
   
   /* バーの背景色 */
@@ -786,10 +781,29 @@ main{
 
 
 @media (min-width: 765px) {
+  .mv{
+    padding-left: 40px;
+    padding-right: 40px;
+  
+    &__catch{
+      font-size: 13px;
+      padding-bottom: 30px;
+      position: absolute;
+      writing-mode: vertical-lr;
+      left: 0px;
+      letter-spacing: 0.2em;
+    }
+  }
+
   /* MVスライダー */
   .Mvswiper{
     .swiper-wrapper{
       padding-bottom: 140px;
+      width: 681px;
+    }
+    .swiper-slide {
+      padding-left: 26px;
+      padding-bottom: 60px;
     }
     
     .swiper-horizontal>.swiper-pagination-progressbar,
@@ -798,7 +812,6 @@ main{
       top: 95%;
       height: 1px;
     }
-
   }
 
 }
