--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -630,6 +630,7 @@ select::-ms-expand {
 .mv {
   padding-left: 40px;
   padding-right: 40px;
+  position: relative;
 }
 .mv__catch {
   text-align: center;
@@ -643,12 +644,13 @@ select::-ms-expand {
   /* バーの背景色 */
   /* バーの色 */
 }
+.Mvswiper .swiper-wrapper {
+  padding-bottom: 5.3333333333vw;
+}
 .Mvswiper .swiper-slide {
-  padding-bottom: 40px;
-  margin-top: 80px;
   opacity: 0.4;
   overflow: hidden;
-  transition: 0.7s;
+  transition: opacity 0.7s;
 }
 .Mvswiper .swiper-horizontal > .swiper-pagination-progressbar,
 .Mvswiper .swiper-pagination-progressbar.swiper-pagination-horizontal {
@@ -661,7 +663,6 @@ select::-ms-expand {
 .Mvswiper .swiper-slide-active {
   opacity: 1;
   z-index: 1;
-  transform: scale(1.2); /* スライドの大きさ調整 */
 }
 .Mvswiper .swiper-pagination-progressbar {
   background-color: #C3C3C3;
@@ -670,27 +671,66 @@ select::-ms-expand {
   background-color: #000;
 }
 
+.scrolldown {
+  position: absolute;
+  right: 15%;
+  bottom: 0%;
+  height: 72px;
+  display: none;
+}
+.scrolldown__letter {
+  position: absolute;
+  left: -5px;
+  top: -50px;
+  transform: rotate(180deg);
+  color: #333;
+  font-size: 0.75rem;
+  letter-spacing: 0.05em;
+  writing-mode: vertical-rl;
+}
+.scrolldown::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0.5px;
+  height: 100%;
+  background: #333;
+}
+
 @media (min-width: 765px) {
   .mv {
-    padding-left: 40px;
-    padding-right: 40px;
+    height: calc(100vh - 170px);
   }
   .mv__catch {
-    font-size: 13px;
-    padding-bottom: 30px;
+    font-size: 16px;
     position: absolute;
     writing-mode: vertical-lr;
-    left: 0px;
+    left: 27%;
+    top: 0;
     letter-spacing: 0.2em;
+    z-index: 2;
   }
   /* MVスライダー */
   .Mvswiper .swiper-wrapper {
-    padding-bottom: 140px;
-    width: 681px;
+    padding-bottom: 10%;
+    width: 100%;
+    height: 540px;
   }
   .Mvswiper .swiper-slide {
-    padding-left: 26px;
-    padding-bottom: 60px;
+    height: 100%;
+    width: 100%;
+    transform: scale(0.55, 0.7) rotate(-4deg);
+  }
+  .Mvswiper .swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .Mvswiper .swiper-slide-active {
+    opacity: 1;
+    z-index: 1;
+    transform: scaleX(1.4) rotate(0deg);
   }
   .Mvswiper .swiper-horizontal > .swiper-pagination-progressbar,
   .Mvswiper .swiper-pagination-progressbar.swiper-pagination-horizontal {
@@ -698,8 +738,10 @@ select::-ms-expand {
     top: 95%;
     height: 1px;
   }
+  .scrolldown {
+    display: block;
+  }
 }
-/* Hover Event */
 /* -------------------------------------------- */
 /* top-about */
 /* -------------------------------------------- */
@@ -710,6 +752,7 @@ select::-ms-expand {
   margin-left: calc(50% - 50vw);
   padding-bottom: 10px;
 }
+
 @media (min-width: 765px) {
   .top-about {
     margin-top: 150px;
@@ -724,7 +767,6 @@ select::-ms-expand {
     padding-left: 30px;
   }
 }
-/* Hover Event */
 /* -------------------------------------------- */
 /* top-style */
 /* -------------------------------------------- */
@@ -801,7 +843,7 @@ select::-ms-expand {
 /* top-salon */
 /* -------------------------------------------- */
 .top-salon {
-  margin-top: 40px;
+  margin-top: 100px;
 }
 .top-salon__right {
   margin-right: calc(50% - 50vw);
@@ -812,7 +854,7 @@ select::-ms-expand {
 
 @media (min-width: 765px) {
   .top-salon {
-    margin-top: 130px;
+    margin-top: 170px;
   }
   .top-salon__cont {
     display: flex;
@@ -1187,18 +1229,22 @@ select::-ms-expand {
 }
 
 .about-img-01 {
+  width: 66.6666666667vw;
   margin-right: 17.3333333333vw;
 }
 .about-img-02 {
+  width: 40.2666666667vw;
   margin-top: -16vw;
   margin-right: calc(50% - 50vw);
   margin-left: 51.7333333333vw;
 }
 .about-img-03 {
+  width: 41.8666666667vw;
   margin-right: 42.1333333333vw;
   margin-top: -30.6666666667vw;
 }
 .about-img-04 {
+  width: 61.8666666667vw;
   margin-top: 50px;
   margin-left: 22.1333333333vw;
 }
@@ -1208,15 +1254,20 @@ select::-ms-expand {
   margin-top: 0;
 }
 .about-img-05 {
+  width: 34.6666666667vw;
   margin-right: 49.6vw;
   margin-top: -3.2vw;
 }
 .about-img-06 {
+  width: 31.2vw;
   margin-right: 17.6vw;
   margin-left: calc(50% - 50vw);
 }
 .about-img-06 .page__image-desc {
   transform-origin: 100% 0;
+}
+.about-img-07 {
+  width: 43.2vw;
 }
 .about-img-07 .page__image-desc {
   transform-origin: 100% 0;
@@ -1233,13 +1284,13 @@ select::-ms-expand {
     margin-top: 116px;
   }
   .about-img-01 {
-    max-width: 660px;
+    width: 660px;
     margin-right: auto;
     margin-right: 26.6666666667vw;
     left: -4.8611111111vw;
   }
   .about-img-02 {
-    max-width: 362px;
+    width: 362px;
     margin-right: 0;
     right: -4.8611111111vw;
     margin-left: auto;
@@ -1249,7 +1300,7 @@ select::-ms-expand {
     text-align: right;
   }
   .about-img-03 {
-    max-width: 605px;
+    width: 605px;
     margin-top: -20.2083333333vw;
     margin-left: 5.9027777778vw;
     margin-right: 22.7777777778vw;
@@ -1260,7 +1311,7 @@ select::-ms-expand {
     left: -50px;
   }
   .about-img-04 {
-    max-width: 704px;
+    width: 704px;
     margin-left: 23.6805555556vw;
     margin-top: 220px;
   }
@@ -1270,14 +1321,14 @@ select::-ms-expand {
     margin-top: 0;
   }
   .about-img-05 {
-    max-width: 413px;
+    width: 413px;
     margin-right: 0;
     margin-top: 0;
     margin-right: 43.75vw;
     margin-top: -9.7222222222vw;
   }
   .about-img-06 {
-    max-width: 400px;
+    width: 400px;
     margin-right: 15.9722222222vw;
     margin-left: 0;
     left: -4.8611111111vw;
@@ -1297,6 +1348,7 @@ select::-ms-expand {
 }
 
 .style-img-01 {
+  width: 77.3333333333vw;
   margin-left: calc(50% - 50vw);
   margin-right: 14.6666666667vw;
 }
@@ -1306,6 +1358,7 @@ select::-ms-expand {
   margin-top: 0;
 }
 .style-img-02 {
+  width: 55.2vw;
   margin-left: 28.8vw;
   margin-top: -21.3333333333vw;
 }
@@ -1313,29 +1366,35 @@ select::-ms-expand {
   line-height: 1.6;
 }
 .style-img-03 {
+  width: 92vw;
   margin-right: calc(50% - 50vw);
   margin-top: 30px;
 }
 .style-img-04 {
+  width: 84vw;
   margin-left: calc(50% - 50vw);
   margin-top: 50px;
+  z-index: 1;
 }
 .style-img-04 .style__type {
-  right: 0;
-  top: 20px;
+  right: -5%;
+  top: 5%;
 }
 .style-img-04 .page__image-desc {
   padding-left: 30px;
 }
 .style-img-05 {
+  width: 55.7333333333vw;
   margin-left: 28vw;
   margin-top: 30px;
 }
 .style-img-06 {
+  width: 39.7333333333vw;
   margin-right: 44.8vw;
   margin-top: -51.7333333333vw;
 }
 .style-img-07 {
+  width: 78.4vw;
   margin-top: 80px;
   margin-left: calc(50% - 50vw);
   margin-right: 2.6666666667vw;
@@ -1346,6 +1405,7 @@ select::-ms-expand {
   top: -25px;
 }
 .style-img-08 {
+  width: 37.6vw;
   margin-right: 37.8666666667vw;
   margin-left: 8.5333333333vw;
   margin-top: -10.1333333333vw;
@@ -1357,6 +1417,7 @@ select::-ms-expand {
   display: none;
 }
 .style-img-09 {
+  width: 36.8vw;
   margin-right: 8vw;
   margin-left: 39.2vw;
   margin-top: -32.8vw;
@@ -1364,43 +1425,49 @@ select::-ms-expand {
 
 @media (min-width: 765px) {
   .style-img-01 {
-    max-width: 644px;
+    width: 644px;
     margin-left: 10.3472222222vw;
     margin-right: 17.7777777778vw;
   }
   .style-img-02 {
-    max-width: 320px;
+    width: 320px;
     margin-left: 50.3472222222vw;
     margin-top: -24.2361111111vw;
   }
   .style-img-03 {
+    width: 605px;
     margin-right: auto;
-    margin-top: -3.6805555556vw;
-    max-width: 605px;
+    margin-top: 0;
+    padding-top: -9.2361111111vw;
+    margin-right: 30.625vw;
   }
   .style-img-04 {
+    width: 743px;
     margin-top: 180px;
     margin-left: 21.0416666667vw;
-    max-width: 743px;
   }
   .style-img-04 .page__image-desc {
     padding-left: 30px;
     text-align: right;
   }
+  .style-img-04 .style__type {
+    right: 0%;
+    top: 3%;
+  }
   .style-img-05 {
+    width: 383px;
     margin-left: 0;
-    max-width: 383px;
     margin-right: 45.625vw;
     margin-top: -54.7916666667vw;
   }
   .style-img-06 {
-    max-width: 303px;
+    width: 303px;
     margin-left: 8.4027777778vw;
     margin-right: 43.1944444444vw;
     margin-top: -1.3194444444vw;
   }
   .style-img-07 {
-    max-width: 628px;
+    width: 628px;
     margin-right: 30.8333333333vw;
     margin-left: -1.8055555556vw;
     margin-top: 178px;
@@ -1410,7 +1477,7 @@ select::-ms-expand {
     left: 15%;
   }
   .style-img-08 {
-    max-width: 287px;
+    width: 287px;
     margin-left: 38.5416666667vw;
     margin-right: 14.1666666667vw;
     margin-top: -50.4166666667vw;
@@ -1419,7 +1486,7 @@ select::-ms-expand {
     display: block;
   }
   .style-img-09 {
-    max-width: 309px;
+    width: 309px;
     margin-top: -3.2638888889vw;
     margin-right: 4.8611111111vw;
     margin-left: 46.3194444444vw;
@@ -1529,11 +1596,11 @@ select::-ms-expand {
     margin-left: auto;
   }
 }
-/* Hover Event */
 /* -------------------------------------------- */
 /* salon */
 /* -------------------------------------------- */
 .salon-img-01 {
+  width: 100vw;
   text-align: right;
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
@@ -1543,16 +1610,19 @@ select::-ms-expand {
   padding-right: 30px;
 }
 .salon-img-02 {
+  width: 86.1333333333vw;
   margin-left: calc(50% - 50vw);
   margin-right: 3.4666666667vw;
   margin-top: 60px;
 }
 .salon-img-03 {
+  width: 68.2666666667vw;
   margin-right: calc(50% - 50vw);
   margin-left: 23.7333333333vw;
   margin-top: 92px;
 }
 .salon-img-04 {
+  width: 90.6666666667vw;
   margin-left: calc(50% - 50vw);
   margin-top: 97px;
 }
@@ -1561,6 +1631,7 @@ select::-ms-expand {
   text-align: right;
 }
 .salon-img-05 {
+  width: 100vw;
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   margin-top: 115px;
@@ -1571,7 +1642,7 @@ select::-ms-expand {
 
 @media (min-width: 765px) {
   .salon-img-01 {
-    max-width: 851px;
+    width: 851px;
     margin-left: 0;
     margin-right: 13.5416666667vw;
   }
@@ -1584,13 +1655,13 @@ select::-ms-expand {
     letter-spacing: 0.5em;
   }
   .salon-img-02 {
-    max-width: 761px;
+    width: 761px;
     margin-right: 0;
     margin-left: 19.7916666667vw;
     margin-top: 180px;
   }
   .salon-img-03 {
-    max-width: 383px;
+    width: 383px;
     margin-right: 41.9444444444vw;
     margin-left: 4.0277777778vw;
     margin-top: -24.5138888889vw;
@@ -1601,14 +1672,14 @@ select::-ms-expand {
   .salon-img-04 {
     margin-top: 130px;
     margin-left: 18.1944444444vw;
-    max-width: 800px;
+    width: 800px;
     margin-right: 0;
   }
   .salon-img-04 .page__image-desc {
     padding-right: 3.9583333333vw;
   }
   .salon-img-05 {
-    max-width: 656px;
+    width: 656px;
     margin-left: 13.3333333333vw;
     margin-right: 13.3333333333vw;
     margin-top: 180px;
@@ -1617,8 +1688,26 @@ select::-ms-expand {
     padding-left: 0px;
   }
 }
-/* Hover Event */
 /* -------------------------------------------- */
 /*  */
 /* -------------------------------------------- */
-/* Hover Event */
+/* 下からフェードイン */
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+.fadeUpAnime {
+  animation-name: fadeUpAnime;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
