--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -641,8 +641,6 @@ select::-ms-expand {
 /* MVスライダー */
 .Mvswiper {
   width: 100%;
-  /* バーの背景色 */
-  /* バーの色 */
 }
 .Mvswiper .swiper-wrapper {
   padding-bottom: 5.3333333333vw;
@@ -652,23 +650,33 @@ select::-ms-expand {
   overflow: hidden;
   transition: opacity 0.7s;
 }
-.Mvswiper .swiper-horizontal > .swiper-pagination-progressbar,
-.Mvswiper .swiper-pagination-progressbar.swiper-pagination-horizontal {
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80px;
-  top: 99%;
-  height: 0.5px;
-}
 .Mvswiper .swiper-slide-active {
   opacity: 1;
   z-index: 1;
 }
-.Mvswiper .swiper-pagination-progressbar {
-  background-color: #C3C3C3;
+
+/* プログレスバー */
+.progressbar {
+  position: relative;
+  width: 21.3333333333vw;
+  height: 1px;
+  margin: 10px auto 0;
+  background: #C3C3C3;
+  border-radius: 7px;
+  overflow: hidden;
 }
-.Mvswiper .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-  background-color: #000;
+.progressbar span {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #000;
+  border-radius: 7px;
+  transform: scaleX(0);
+  transform-origin: left center;
+  transition-timing-function: linear;
 }
 
 .scrolldown {
@@ -713,7 +721,6 @@ select::-ms-expand {
   }
   /* MVスライダー */
   .Mvswiper .swiper-wrapper {
-    padding-bottom: 10%;
     width: 100%;
     height: 540px;
   }
@@ -732,11 +739,10 @@ select::-ms-expand {
     z-index: 1;
     transform: scaleX(1.4) rotate(0deg);
   }
-  .Mvswiper .swiper-horizontal > .swiper-pagination-progressbar,
-  .Mvswiper .swiper-pagination-progressbar.swiper-pagination-horizontal {
-    width: 100px;
-    top: 95%;
-    height: 1px;
+  /* プログレスバー */
+  .progressbar {
+    width: 110px;
+    margin: 10px auto 0;
   }
   .scrolldown {
     display: block;
@@ -1698,7 +1704,7 @@ select::-ms-expand {
 
 .fadeUpAnime {
   animation-name: fadeUpAnime;
-  animation-duration: 1s;
+  animation-duration: 1.8s;
   animation-fill-mode: forwards;
   opacity: 0;
 }
