--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -742,6 +742,7 @@ select::-ms-expand {
 /* MVスライダー */
 .Mvswiper{
   width: 100%;
+
   .swiper-wrapper{
     padding-bottom: calc(20 / 375 *100vw);
   }
@@ -752,28 +753,34 @@ select::-ms-expand {
     transition:  opacity .7s;
   }
   
-  .swiper-horizontal>.swiper-pagination-progressbar,
-  .swiper-pagination-progressbar.swiper-pagination-horizontal{
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px;
-    top: 99%;
-    height: 0.5px;
-  }
-  
   .swiper-slide-active {
     opacity: 1;
     z-index: 1;
   }
-  
-  /* バーの背景色 */
-  .swiper-pagination-progressbar {
-    background-color: #C3C3C3;
-  }
-  
-  /* バーの色 */
-  .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-    background-color: #000;
+}
+
+/* プログレスバー */
+.progressbar{
+  position: relative;
+  width: calc(80/375*100vw);
+  height: 1px;
+  margin: 10px auto 0;
+  background: #C3C3C3;
+  border-radius: 7px;
+  overflow: hidden;
+
+  span{
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #000;
+    border-radius: 7px;
+    transform: scaleX(0);
+    transform-origin: left center;
+    transition-timing-function: linear;
   }
 }
 
@@ -828,7 +835,6 @@ select::-ms-expand {
   /* MVスライダー */
   .Mvswiper{
     .swiper-wrapper{
-      padding-bottom: 10%;
       width: 100%;
       height: 540px;
     }
@@ -849,14 +855,14 @@ select::-ms-expand {
       z-index: 1;
       transform: scaleX(1.4) rotate(0deg);
     }
-    
-    .swiper-horizontal>.swiper-pagination-progressbar,
-    .swiper-pagination-progressbar.swiper-pagination-horizontal{
-      width: 100px;
-      top: 95%;
-      height: 1px;
-    }
   }
+
+  /* プログレスバー */
+  .progressbar{
+    width: 110px;
+    margin: 10px auto 0;
+  }
+
   .scrolldown{
     display: block;
   }
@@ -2072,7 +2078,7 @@ select::-ms-expand {
 
 .fadeUpAnime {
   animation-name:fadeUpAnime;
-  animation-duration: 1s;
+  animation-duration: 1.8s;
   animation-fill-mode:forwards;
   opacity:0;
 }
